--- a/lib/lp/translations/doc/poimport-pofile-syntax-error.txt
+++ b/lib/lp/translations/doc/poimport-pofile-syntax-error.txt
@@ -8,8 +8,9 @@ In this test, we are going to check that we detect and notify the error.
 Here are some imports we need to get this test running.
 
     >>> from canonical.launchpad.interfaces import IPersonSet
-    >>> from canonical.launchpad.interfaces import ITranslationImportQueue
-    >>> from canonical.launchpad.database import POTemplateSubset
+    >>> from lp.translations.interfaces.translationimportqueue import (
+    ...     ITranslationImportQueue)
+    >>> from lp.translations.model.potemplate import POTemplateSubset
     >>> import datetime
     >>> import pytz
     >>> UTC = pytz.timezone('UTC')
@@ -21,7 +22,8 @@ We need this for the Librarian to work properly.
 
 And also, the DBSchema to change the imports status
 
-    >>> from canonical.launchpad.interfaces import RosettaImportStatus
+    >>> from lp.translations.interfaces.translationimportqueue import (
+    ...     RosettaImportStatus)
 
 Login as an admin to be able to do changes to the import queue.
 
