--- a/lib/lp/translations/stories/standalone/xx-pomsgset-translate.txt
+++ b/lib/lp/translations/stories/standalone/xx-pomsgset-translate.txt
@@ -451,8 +451,8 @@ we do it directly in the database.
     >>> from zope.component import getUtility
     >>> from canonical.launchpad.ftests import login, logout
     >>> from canonical.launchpad.interfaces import (
-    ...     IDistributionSet, IPersonSet,
-    ...     IPOTemplateSet, ISourcePackageNameSet)
+    ...     IDistributionSet, IPersonSet, ISourcePackageNameSet)
+    >>> from lp.translations.interfaces.potemplate import IPOTemplateSet
     >>> login("carlos@canonical.com")
     >>> carlos = getUtility(IPersonSet).getByName('carlos')
 
