--- a/lib/lp/translations/browser/tests/poexport-request-views.txt
+++ b/lib/lp/translations/browser/tests/poexport-request-views.txt
@@ -5,7 +5,7 @@ PO Export Request Browser Views
 
 Check there are no requests in the database to start with.
 
-    >>> from canonical.launchpad.database import POExportRequest
+    >>> from lp.translations.model.poexportrequest import POExportRequest
     >>> POExportRequest.select().count()
     0
 
@@ -15,7 +15,7 @@ Here's our user who's going to request some PO files.
 
 Here's the PO template they're going to request some files from.
 
-    >>> from canonical.launchpad.database import POTemplate
+    >>> from lp.translations.model.potemplate import POTemplate
     >>> potemplate = POTemplate.get(1)
 
 Here's the for variables from the user.
@@ -82,7 +82,7 @@ Clear the queue.
 
 Let's request a PO file instead this time.
 
-    >>> from canonical.launchpad.database import POFile
+    >>> from lp.translations.model.pofile import POFile
     >>> pofile = POFile.get(1)
 
 Here's the request getting processed.
@@ -112,7 +112,6 @@ Clear the queue.
 Let's request a partial PO file instead this time. In the form this is done
 by ticking the checkbox 'pochanged'.
 
-    >>> from canonical.launchpad.database import POFile
     >>> pofile = POFile.get(1)
     >>> form = {'format': 'PO', 'pochanged': 'POCHANGED'}
     >>> pofile_view = create_view(
