--- a/lib/lp/translations/doc/poexport-queue.txt
+++ b/lib/lp/translations/doc/poexport-queue.txt
@@ -26,7 +26,7 @@ When there is an error, the system will notify it.
 To note error messages with the failure file, it should happen inside an
 exception handling so we can get the exception error:
 
-    >>> from canonical.launchpad.database import POTemplate
+    >>> from lp.translations.model.potemplate import POTemplate
     >>> potemplate = POTemplate.get(1)
     >>> pofile = potemplate.getPOFileByLang('es')
 
@@ -216,8 +216,10 @@ This method handles entries from the queue of entries to be exported.
 First, fill the export queue with entries to be exported.
 
     >>> from zope.component import getUtility
-    >>> from canonical.launchpad.interfaces import IPOExportRequestSet
-    >>> from canonical.launchpad.interfaces import TranslationFileFormat
+    >>> from lp.translations.interfaces.poexportrequest import (
+    ...     IPOExportRequestSet)
+    >>> from lp.translations.interfaces.translationfileformat import (
+    ...     TranslationFileFormat)
     >>> export_request_set = getUtility(IPOExportRequestSet)
 
 The queue is empty by default.
