--- a/lib/lp/translations/doc/poimport.txt
+++ b/lib/lp/translations/doc/poimport.txt
@@ -10,10 +10,11 @@ Here are some imports we need to get this test running.
 
     >>> from canonical.launchpad.ftests import syncUpdate
     >>> from canonical.launchpad.interfaces import (
-    ...     ILanguageSet, ILaunchpadCelebrities, IPersonSet, IProductSet,
-    ...     ITranslationImportQueue)
-    >>> from canonical.launchpad.database import (
-    ...     POTemplateSubset, SourcePackageName)
+    ...     ILanguageSet, ILaunchpadCelebrities, IPersonSet, IProductSet)
+    >>> from lp.translations.interfaces.translationimportqueue import (
+    ...     ITranslationImportQueue, RosettaImportStatus)
+    >>> from canonical.launchpad.database import SourcePackageName
+    >>> from lp.translations.model.potemplate import POTemplateSubset
     >>> from lp.translations.scripts.po_import import (
     ...     AutoApproveProcess, ImportProcess)
     >>> import datetime
@@ -23,10 +24,6 @@ Here are some imports we need to get this test running.
 We need this for the Librarian to work properly.
 
     >>> import transaction
-
-And also, the DBSchema to change the imports status
-
-    >>> from canonical.launchpad.interfaces import RosettaImportStatus
 
 Here's a fake logger to capture any errors that happen.
 
@@ -204,7 +201,7 @@ The entry indicates what file it is to be imported to; importing it to
 any other file would be an error.
 
     >>> entry.setStatus(RosettaImportStatus.APPROVED)
-    >>> from canonical.launchpad.interfaces import IPOTemplateSet
+    >>> from lp.translations.interfaces.potemplate import IPOTemplateSet
     >>> other_product = getUtility(IProductSet).getByName('netapplet')
     >>> other_productseries = other_product.getSeries('trunk')
     >>> template_set = getUtility(IPOTemplateSet)
@@ -284,7 +281,8 @@ validation errors.
 
 This is the dbschema that controls the validation of a translation.
 
-    >>> from canonical.launchpad.interfaces import TranslationValidationStatus
+    >>> from lp.translations.interfaces.translationmessage import (
+    ...     TranslationValidationStatus)
 
 The process of importing a PO file is much like that of importing a PO
 template. Remember, we need to tell the system that this po file is an
