--- a/lib/lp/translations/doc/rosetta-karma.txt
+++ b/lib/lp/translations/doc/rosetta-karma.txt
@@ -8,10 +8,11 @@ like SQLObjects are not persistent between transactions.
 
     >>> import transaction
     >>> from canonical.launchpad.interfaces import (
-    ...     IKarmaActionSet, IPersonSet, ITranslationImportQueue,
+    ...     IKarmaActionSet, IPersonSet,
     ...     ILaunchpadCelebrities)
-    >>> from canonical.launchpad.database import POTemplate
-    >>> from canonical.launchpad.interfaces import RosettaImportStatus
+    >>> from lp.translations.interfaces.translationimportqueue import (
+    ...     ITranslationImportQueue, RosettaImportStatus)
+    >>> from lp.translations.model.potemplate import POTemplate
     >>> from canonical.database.sqlbase import flush_database_caches
 
     >>> translation_import_queue = getUtility(ITranslationImportQueue)
