--- a/lib/lp/translations/doc/rosetta-poimport-script.txt
+++ b/lib/lp/translations/doc/rosetta-poimport-script.txt
@@ -1,8 +1,10 @@
 =  PO import script =
 
-    >>> from canonical.launchpad.database import POTemplate
-    >>> from canonical.launchpad.interfaces import (
-    ...     IPersonSet, ITranslationImportQueue, RosettaImportStatus)
+    >>> from lp.translations.model.potemplate import POTemplate
+    >>> from canonical.launchpad.interfaces import IPersonSet
+    >>> from lp.translations.interfaces.translationimportqueue import (
+    ...     ITranslationImportQueue,
+    ...     RosettaImportStatus)
     >>> from canonical.config import config
     >>> import datetime
     >>> import pytz
@@ -50,7 +52,8 @@ without special privileges, like "cprov": structured privileges are
 enough (but we could go with "open" as well, which would allow not
 only suggestions but full translations as well).
 
-    >>> from canonical.launchpad.interfaces import TranslationPermission
+    >>> from lp.translations.interfaces.translationgroup import (
+    ...     TranslationPermission)
     >>> product = pofile.potemplate.productseries.product
     >>> product.translationpermission = TranslationPermission.STRUCTURED
 
