--- a/lib/lp/translations/stories/standalone/xx-potemplate-admin.txt
+++ b/lib/lp/translations/stories/standalone/xx-potemplate-admin.txt
@@ -161,7 +161,8 @@ And now let's get back to renaming.
 Distributions get slightly wider permissions to manage their templates
 autonomously.
 
-    >>> from canonical.launchpad.database import Distribution, POTemplateSet
+    >>> from canonical.launchpad.database import Distribution
+    >>> from lp.translations.model.potemplate import POTemplateSet
     >>> ubuntu = Distribution.selectOneBy(name='ubuntu')
     >>> hoary = ubuntu['hoary']
     >>> templateset = POTemplateSet()
