--- a/lib/lp/translations/tests/potmsgset-update-translation.txt
+++ b/lib/lp/translations/tests/potmsgset-update-translation.txt
@@ -2,8 +2,8 @@
   >>> import pytz
   >>> from zope.component import getUtility
   >>> from canonical.database.sqlbase import flush_database_updates
-  >>> from canonical.launchpad.database import POMsgID
-  >>> from canonical.launchpad.database import POTemplate
+  >>> from lp.translations.model.pomsgid import POMsgID
+  >>> from lp.translations.model.potemplate import POTemplate
   >>> from canonical.launchpad.interfaces import IPersonSet
   >>> UTC = pytz.timezone('UTC')
 
