--- a/lib/lp/translations/utilities/doc/gettext_mo_exporter.txt
+++ b/lib/lp/translations/utilities/doc/gettext_mo_exporter.txt
@@ -11,7 +11,8 @@ http://www.gnu.org/software/gettext/manual/html_chapter/gettext_10.html#MO-Files
 
     >>> from zope.interface.verify import verifyObject
     >>> from canonical.launchpad.helpers import string_to_tarfile
-    >>> from canonical.launchpad.interfaces import ITranslationFormatExporter
+    >>> from lp.translations.interfaces.translationexporter import (
+    ...     ITranslationFormatExporter)
     >>> from lp.translations.utilities.gettext_mo_exporter import (
     ...     GettextMOExporter)
     >>> from lp.translations.utilities.gettext_po_parser import (
