--- a/lib/lp/translations/doc/vpoexport.txt
+++ b/lib/lp/translations/doc/vpoexport.txt
@@ -93,7 +93,7 @@ all current messages that have not been imported.
 A particular product has two series, trunk and stable, each with the
 same template.  The templates thus share messages.
 
-    >>> from canonical.launchpad.database.translationtemplateitem import (
+    >>> from lp.translations.model.translationtemplateitem import (
     ...     TranslationTemplateItem)
     >>> product = factory.makeProduct()
     >>> trunk = product.getSeries('trunk')
